--- a/assets/fonts/additional.css
+++ b/assets/fonts/additional.css
@@ -67,3 +67,10 @@
     font-weight: 800;
     font-style: italic;
 }
+
+body {
+  font-family: 'OpenSans';
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
+}
