--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 { font-family: Helvetica, sans-serif; font-weight: 900; l
 
 p, dl, ol, ul { font-size: 1rem; margin-top: 0; margin-bottom: 1rem; }
 
-ul, ol { padding: 0px 25px;  }
+li.margin { margin-left: 10px; }
 
 pre, code, samp { font-family: "Source Code Pro", Consolas, monospace; font-size: inherit; }
 
