--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,7 @@ h6, .h6 { font-size: 0.75rem; }
 /* Basscss Color Base */
 body { color: #333; background-color: white; }
 
-a { color: #B509AC; text-decoration: none; }
+a { color: #d4544a; text-decoration: none; }
 
 a:hover { text-decoration: underline; }
 
