--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,8 @@ body { color: #333; background-color: white; }
 
 a { color: red; text-decoration: none; }
 
+.link:hover { color: #FF0000; }
+
 a:hover { text-decoration: underline; }
 
 pre, code { background-color: #eee; border-radius: 3px; }
