--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ input, select, textarea, button { font-family: inherit; font-size: inherit; line
 body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; font-size: 14px; line-height: 1.5; color: #24292e; background-color: #fff; }
 
 a { color: red; text-decoration: none; }
+a:link { color: red;}
 a:hover { text-decoration: underline; }
 
 b, strong { font-weight: 600; }
