--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,6 +129,7 @@ body { color: #333; background-color: white; }
 a { color: red; text-decoration: none; }
 
 a:link { color: red; }
+a:visited { color: red; }
 
 a:hover { text-decoration: underline; }
 
