--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Ar
 
 a { color: red; text-decoration: none; }
 a:link { color: red;}
+a:visited { color: red; }
 a:hover { text-decoration: underline; }
 
 b, strong { font-weight: 600; }
