--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ img { max-width: 100%; }
 svg { max-height: 100%; }
 
 /* Basscss Base Typography */
-body { font-family: Garamond, Arial, Helvetica, sans-serif; line-height: 1.5; font-size: 100%; }
+body { background-color: whitesmoke; font-family: Garamond, Arial, Helvetica, sans-serif; line-height: 1.5; font-size: 100%; }
 
 h1, h2, h3, h4, h5, h6 { font-family: Garamond, Arial, Helvetica, sans-serif; font-weight: 900; line-height: 1.25; margin-top: 1em; margin-bottom: .5em; }
 
