--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,10 @@ body, button { margin: 0; }
 
 button, input, select, textarea { font-family: inherit; font-size: 100%; }
 
-img { max-width: 100%; }
+img {
+  max-width: 100%;
+  display: block;
+}
 
 svg { max-height: 100%; }
 
